--- a/GalaxySolarSystem(Example of Indexers)/GalaxySolarSystem(Example of Indexers)/GalaxySolarSystem(Example of Indexers).csproj
+++ b/GalaxySolarSystem(Example of Indexers)/GalaxySolarSystem(Example of Indexers)/GalaxySolarSystem(Example of Indexers).csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enumerations.cs" />
+    <Compile Include="Galaxy.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
