--- a/GalaxySolarSystem(Example of Indexers)/GalaxySolarSystem(Example of Indexers)/GalaxySolarSystem(Example of Indexers).csproj
+++ b/GalaxySolarSystem(Example of Indexers)/GalaxySolarSystem(Example of Indexers)/GalaxySolarSystem(Example of Indexers).csproj
@@ -44,7 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Enumerations.cs" />
-    <Compile Include="Galaxy.cs" />
+    <Compile Include="NewGalaxy.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
