--- a/LatinToArmenianConverter/LatinToArmenianConverter/LatinToArmenianConverter.csproj
+++ b/LatinToArmenianConverter/LatinToArmenianConverter/LatinToArmenianConverter.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ExtentionLatToArm.cs" />
     <Compile Include="LatToArm.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
