--- a/Vector-Arithmetic/TestingVectorsAtithmetic/TestingVectorsAtithmetic.csproj
+++ b/Vector-Arithmetic/TestingVectorsAtithmetic/TestingVectorsAtithmetic.csproj
@@ -49,6 +49,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\VectorArithmetic\VectorArithmetic.csproj">
+      <Project>{e8c73b45-e5ff-4d34-b7fd-27a00e86e32a}</Project>
+      <Name>VectorArithmetic</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
