--- a/Vector-Arithmetic/VectorArithmetic/VectorArithmetic.csproj
+++ b/Vector-Arithmetic/VectorArithmetic/VectorArithmetic.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{44E05080-1901-48B4-9CF2-AFE283999F07}</ProjectGuid>
+    <ProjectGuid>{18586A46-4045-4C8A-8E41-531D6FA2803C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Vector_Arithmetic</RootNamespace>
-    <AssemblyName>Vector-Arithmetic</AssemblyName>
+    <RootNamespace>VectorArithmetic</RootNamespace>
+    <AssemblyName>VectorArithmetic</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,8 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="VectorArithmetic.cs" />
+    <Compile Include="Point.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Vector.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
