--- a/AcceleratorMagnets(InheritanceExample)/AcceleratorMagnets(InheritanceExample)/AcceleratorMagnets(InheritanceExample).csproj
+++ b/AcceleratorMagnets(InheritanceExample)/AcceleratorMagnets(InheritanceExample)/AcceleratorMagnets(InheritanceExample).csproj
@@ -46,6 +46,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UndulatorMagnet.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
