--- a/Geometric-Shapes-3D/GeometricShapes3D/GeometricShapes3D.csproj
+++ b/Geometric-Shapes-3D/GeometricShapes3D/GeometricShapes3D.csproj
@@ -40,10 +40,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Angle3D.cs" />
     <Compile Include="Elipsoid.cs" />
+    <Compile Include="Enums.cs" />
+    <Compile Include="IMovable.cs" />
     <Compile Include="Parallelogram.cs" />
+    <Compile Include="Point3D.cs" />
     <Compile Include="Shape3D.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShapeMover.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
