--- a/Geometric-Shapes-3D/GeometricShapes3D/GeometricShapes3D.csproj
+++ b/Geometric-Shapes-3D/GeometricShapes3D/GeometricShapes3D.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Elipsoid.cs" />
     <Compile Include="Enums.cs" />
+    <Compile Include="IChangeable.cs" />
     <Compile Include="IMovable.cs" />
     <Compile Include="Parallelogram.cs" />
     <Compile Include="Point3D.cs" />
