--- a/Integral Calculator/Integral Calculator/Integral Calculator.csproj
+++ b/Integral Calculator/Integral Calculator/Integral Calculator.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Integration Accuracy.cs" />
+    <Compile Include="MathFunctions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
