--- a/Web Page Spying/Web Page Spying/Web Page Spying.csproj
+++ b/Web Page Spying/Web Page Spying/Web Page Spying.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WepSpy.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
