--- a/Threads/TreadsRecursionCall/TreadsRecursionCall.csproj
+++ b/Threads/TreadsRecursionCall/TreadsRecursionCall.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DADAD4B2-04E4-4658-ACB0-70AEBCCF6615}</ProjectGuid>
+    <ProjectGuid>{C06127CD-8DD4-4B56-BE92-798F99AA01D4}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NeoMatrix</RootNamespace>
-    <AssemblyName>NeoMatrix</AssemblyName>
+    <RootNamespace>TreadsRecursionCall</RootNamespace>
+    <AssemblyName>TreadsRecursionCall</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,7 +43,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MatrixBuilder.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
